--- a/pub/System/TinyMCEPlugin/tinymce/jscripts/tiny_mce/plugins/foswikiimage/image.htm
+++ b/pub/System/TinyMCEPlugin/tinymce/jscripts/tiny_mce/plugins/foswikiimage/image.htm
@@ -35,7 +35,7 @@
          </tr>
         </table>
        </td>
-       <td colspan="2">
+       <td rowspan="0" valign="top" colspan="2">
 		{#foswikiimage_dlg.img_url_help}
        </td>
       </tr>
