--- a/pub/System/TinyMCEPlugin/tinymce/jscripts/tiny_mce/plugins/foswikibuttons/attach_error_autoinc.htm
+++ b/pub/System/TinyMCEPlugin/tinymce/jscripts/tiny_mce/plugins/foswikibuttons/attach_error_autoinc.htm
@@ -19,6 +19,7 @@
               </div>
           </fieldset>
           <div style="float: right">
+              <input type="hidden" name="topic" value="" id="upload_form_topic"/>
               <input type="button" id="cancel" name="cancel" value="{#cancel}" onclick="tinyMCEPopup.close();" />
           </div>
       </form>
