--- a/pub/System/TinyMCEPlugin/tinymce/jscripts/tiny_mce/plugins/foswikibuttons/attach.htm
+++ b/pub/System/TinyMCEPlugin/tinymce/jscripts/tiny_mce/plugins/foswikibuttons/attach.htm
@@ -35,7 +35,7 @@
                 <input type="button" id="insert" name="insert" value="{#foswikibuttons_dlg.insert_attachment_link}" onclick="AttachDlg.insertLink();" />
               </div>
               <div style="float: right">
-                <input type="button" id="cancel" name="cancel" value="{#cancel}" onclick="tinyMCEPopup.close();" />
+                <input type="button" id="cancel" name="close" value="{#foswikibuttons_dlg.close}" onclick="tinyMCEPopup.close();" />
               </div>
             </fieldset>
             <label>{#foswikibuttons_dlg.attach_help}</label>
@@ -69,7 +69,7 @@
                 <input type="submit" id="insert" name="insert" value="{#foswikibuttons_dlg.upload}" />
               </div>
               <div style="float: right">
-                <input type="button" id="cancel" name="cancel" value="{#cancel}" onclick="tinyMCEPopup.close();" />
+                <input type="button" id="cancel" name="close" value="{#foswikibuttons_dlg.close}" onclick="tinyMCEPopup.close();" />
               </div>
               <br clear="all" />
               <iframe name="status_frame" style="display: block" width="100%" height="50px">
