--- a/pub/System/TinyMCEPlugin/tinymce/jscripts/tiny_mce/plugins/foswikibuttons/attach_error_autoinc.htm
+++ b/pub/System/TinyMCEPlugin/tinymce/jscripts/tiny_mce/plugins/foswikibuttons/attach_error_autoinc.htm
@@ -20,7 +20,7 @@
           </fieldset>
           <div style="float: right">
               <input type="hidden" name="topic" value="" id="upload_form_topic"/>
-              <input type="button" id="cancel" name="cancel" value="{#cancel}" onclick="tinyMCEPopup.close();" />
+              <input type="button" id="cancel" name="close" value="{#foswikibuttons_dlg.close}" onclick="tinyMCEPopup.close();" />
           </div>
       </form>
   </body>
