--- a/pub/System/TinyMCEPlugin/tinymce/jscripts/tiny_mce/plugins/foswikibuttons/colours.htm
+++ b/pub/System/TinyMCEPlugin/tinymce/jscripts/tiny_mce/plugins/foswikibuttons/colours.htm
@@ -25,8 +25,8 @@
               <td class="foswikicolours" style="background-color:teal">
                 <input title="%TEAL%" class="colours" style="background-color:teal" type="button" value="&nbsp;" onclick="ColoursDlg.set('teal')" />
               </td>
-              <td class="foswikicolours" style="background-color:cyan">
-                <input title="%AQUA%" class="colours" style="background-color:cyan" type="button" value="&nbsp;" onclick="ColoursDlg.set('aqua')" />
+              <td class="foswikicolours" style="background-color:aqua">
+                <input title="%AQUA%" class="colours" style="background-color:aqua" type="button" value="&nbsp;" onclick="ColoursDlg.set('aqua')" />
               </td>
               <td class="foswikicolours" style="background-color:green">
                 <input title="%GREEN%" class="colours" style="background-color:green" type="button" value="&nbsp;" onclick="ColoursDlg.set('green')" />
@@ -155,8 +155,8 @@
               <td class="colours" style="background-color:darkturquoise">
                 <input title="darkturquoise" class="colours" style="background-color:darkturquoise" type="button" value="&nbsp;" onclick="ColoursDlg.set('darkturquoise')" />
               </td>
-              <td class="colours" style="background-color:aqua">
-                <input title="aqua" class="colours" style="background-color:aqua" type="button" value="&nbsp;" onclick="ColoursDlg.set('aqua')" />
+              <td class="colours" style="background-color:cyan">
+                <input title="cyan" class="colours" style="background-color:cyan" type="button" value="&nbsp;" onclick="ColoursDlg.set('cyan')" />
               </td>
               <td class="colours" style="background-color:turquoise">
                 <input title="turquoise" class="colours" style="background-color:turquoise" type="button" value="&nbsp;" onclick="ColoursDlg.set('turquoise')" />
